--- a/memo/0.md
+++ b/memo/0.md
@@ -23,9 +23,11 @@ baseStyle.color.theme.base
 baseStyle.color.theme.main
 baseStyle.color.theme.accent
 baseStyle.color.isLight
-baseStyle.color.isSoft
+baseStyle.color.isSoft isBright
 baseStyle.color.hasBlue
 ```
+
+layoutはvan.tags.divを返す。colorはCss.set()でCSS変数をセットする。
 
 # 
 
