--- a/memo/1.md
+++ b/memo/1.md
@@ -14,8 +14,26 @@ body {
 }
 ```
 ```javascript
-
+document.body.style.setProperty('width', `${width}px`)
+document.body.style.setProperty('width', `${height}px`)
 ```
 
+
+
+```html
+<body><div></div></body>
+
+```
+```css
+body {
+    overflow-x:hidden;
+    overflow-y:hidden;
+    padding:0;margin:0;
+}
+```
+```javascript
+document.querySelector('div').style.setProperty('width', `${document.body.clientWidth}px`)
+document.querySelector('div').style.setProperty('height', `${document.body.clientHeight}px`)
+```
 
 
